# RushBoTT-ros2_ws

./: README.md
.dev/: inertial_calcs.xacro  materials.xacro  myrobot.urdf.xacro  wheel.xacro
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/config/: bashrc
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.devcontainer/intel_gpu/: devcontainer.json
.devcontainer/no_gpu/: devcontainer.json
.devcontainer/nvidia_gpu/: devcontainer.json
install/: local_setup.sh  setup.sh
install/ros_gz_example_application/share/ros_gz_example_application/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_gz_example_bringup/share/ament_index/resource_index/package_run_dependencies/: ros_gz_example_bringup
install/ros_gz_example_bringup/share/ament_index/resource_index/parent_prefix_path/: ros_gz_example_bringup
install/ros_gz_example_bringup/share/ros_gz_example_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_gz_example_bringup/share/ros_gz_example_bringup/cmake/: ros_gz_example_bringupConfig.cmake
install/ros_gz_example_description/share/ros_gz_example_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_gz_example_description/share/ros_gz_example_description/cmake/: ros_gz_example_descriptionConfig.cmake
install/ros_gz_example_gazebo/share/ament_index/resource_index/package_run_dependencies/: ros_gz_example_gazebo
install/ros_gz_example_gazebo/share/ament_index/resource_index/parent_prefix_path/: ros_gz_example_gazebo
install/ros_gz_example_gazebo/share/ros_gz_example_gazebo/: package.sh
install/rushbott_description/share/ament_index/resource_index/package_run_dependencies/: rushbott_description
install/rushbott_description/share/ament_index/resource_index/parent_prefix_path/: rushbott_description
install/rushbott_description/share/rushbott_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rushbott_description/share/rushbott_description/cmake/: rushbott_descriptionConfig-version.cmake  rushbott_descriptionConfig.cmake
install/rushbott_description/share/rushbott_description/environment/: ament_prefix_path.dsv  path.dsv
install/rushbott_description/share/rushbott_description/launch/: robot_description.launch.py  rviz2.launch.py
install/rushbott_description/share/rushbott_description/rviz/: rushbott.rviz
install/rushbott_description/share/rushbott_description/urdf/: common_properties.urdf.xacro  rushbott.urdf.xacro  wheel.urdf.xacro
log/: latest_build  latest_list
ros2_ws/install/: setup.sh
ros2_ws/install/my_package/share/my_package/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/my_package/: package.xml
src/my_package/: setup.py
src/my_package/launch/: robot_launch.py
src/rushbott/ros_gz_example_gazebo/: CMakeLists.txt
src/rushbott/rushbott_description/: CMakeLists.txt  package.xml
src/rushbott/rushbott_description/launch/: rviz2.launch.py
src/rushbott/rushbott_description/rviz/: rushbott.rviz
src/rushbott/rushbott_description/urdf/: common_properties.urdf.xacro  rushbott.urdf.xacro  wheel.urdf.xacro
src/rushbott_common/rover_controller/: CMakeLists.txt  package.xml  rover_controller.xml
src/rushbott_common/rover_controller/include/rover_controller/: drive_module.hpp  odometry.hpp  rover_controller.hpp  steering.hpp
src/rushbott_common/rover_controller/src/: odometry.cpp  rover_controller.cpp  rover_controller_parameters.yaml  steering.cpp
src/rushbott_common/rover_controller/test/: test_load_rover_controller.cpp
src/rushbott_common/rover_controller/test/config/: test_rover_controller.yaml
src/rushbott_common/rover_controller_old/: CMakeLists.txt  package.xml
src/rushbott_common/rover_controller_old/include/rover_controller/: steering.hpp
src/rushbott_common/rover_controller_old/src/: odometry.cpp  rover_controller.cpp
src/rushbott_common/rushbott_common_bringup/: CMakeLists.txt  package.xml
src/rushbott_common/rushbott_common_bringup/launch/: robot_description.launch.py  rushbott_nodes.launch.py  rviz2.launch.py
src/rushbott_common/rushbott_common_bringup/rviz/: rushbott.rviz
src/rushbott_common/rushbott_control/: CMakeLists.txt  package.xml
src/rushbott_common/rushbott_control/config/: control.yaml
src/rushbott_common/rushbott_control/launch/: control.launch.py
src/rushbott_common/rushbott_description/: CMakeLists.txt  package.xml
src/rushbott_common/rushbott_description/urdf/: arm.urdf.xacro  arm.xacro  arm_link.urdf.xacro  common_properties.urdf.xacro  lidar.urdf.xacro  ros2_control.xacro  rushbott.urdf.xacro  upperarm.urdf.xacro  wheel.urdf.xacro  wheel_with_servo.urdf.xacro
src/rushbott_common/rushbott_rover/: package.xml  setup.cfg  setup.py
src/rushbott_common/rushbott_rover/config/: rover.yaml
src/rushbott_common/rushbott_rover/launch/: rover_controller.launch.py
src/rushbott_common/rushbott_rover/rushbott_rover/: drive_module.py  rover_controller.py  states.py  steering_controller.py
src/rushbott_common/rushbott_slam/: CMakeLists.txt  package.xml
src/rushbott_common/rushbott_slam/config/: mapper_params_online_async.yaml
src/rushbott_common/rushbott_slam/launch/: slam.launch.py
src/rushbott_gz/rushbott_gz_bringup/: CMakeLists.txt  package.xml
src/rushbott_gz/rushbott_gz_bringup/launch/: rushbott_gz.launch.py  rushbott_ros_gz_bridge.launch.py  rushbott_spawn.launch.py  sim.launch.py
src/rushbott_gz/rushbott_gz_bringup/worlds/: maze.sdf  maze.sf
